force-app/main/default/objects/Legal_Advocacy_Impact__c/Legal_Advocacy_Impact__c.object-meta.xml
<CustomObject>
    <label>Legal Advocacy Impact</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>LA Impact Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legal Advocacy Impact</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>