force-app/main/default/objects/Legal_Advocacy_Impact__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Legal Advocacy Impact</relationshipLabel>
    <relationshipName>ASPCA_Impact</relationshipName>
    <type>Lookup</type>
</CustomField>