force-app/main/default/objects/Legal_Advocacy_Impact__c/fields/Department_Involved__c.field-meta.xml
<CustomField>
    <fullName>Department_Involved__c</fullName>
    <label>Department Involved</label>
    <length>255</length>
    <type>Text</type>
</CustomField>