force-app/main/default/objects/Legal_Advocacy_Impact__c/fields/Impact_Notes__c.field-meta.xml
<CustomField>
    <fullName>Impact_Notes__c</fullName>
    <label>Impact Notes</label>
    <type>TextArea</type>
</CustomField>