force-app/main/default/objects/Legal_Advocacy_Impact__c/fields/Impact_Year__c.field-meta.xml
<CustomField>
    <fullName>Impact_Year__c</fullName>
    <defaultValue>TEXT(YEAR(TODAY()))</defaultValue>
    <label>Impact Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>