force-app/main/default/objects/Legal_Advocacy_Impact__c/fields/Legal_Advocacy_Matter__c.field-meta.xml
<CustomField>
    <fullName>Legal_Advocacy_Matter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Advocacy Matter</label>
    <referenceTo>Legal_Advocacy_Matter__c</referenceTo>
    <relationshipLabel>Legal Advocacy Impact</relationshipLabel>
    <relationshipName>Legal_Advocacy_Impact</relationshipName>
    <type>Lookup</type>
</CustomField>