force-app/main/default/objects/Legal_Advocacy_Impact__c/fields/Other_Dept_Involved__c.field-meta.xml
<CustomField>
    <fullName>Other_Dept_Involved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other Dept. Involved (Explain in notes)</label>
    <type>Checkbox</type>
</CustomField>